<resources>
    <string name="app_name">Political Tracker</string>

    <string name="login_button_label">Login</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="desc_pt_logo">Political Tracker Logo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authenticate">Login or Sign Up</string>
    <string name="title_activity_main_feed">Political Tracker News Feed</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_upgrade">Upgrade</string>
    <string name="menu_subscriptions">Subscriptions</string>
    <string name="menu_all_news">All News</string>
    <string name="menu_account_preferences">Account Preferences</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_result">Search Results</string>
    <string name="title_activity_login">Log In or Sign Up</string>
    <string name="loginButtonLabel">Log In</string>
    <string name="profileButtonLabel">Profile</string>
    <string name="password_hint">password</string>
    <string name="email_address_hint">email address</string>
    <string name="ab_refresh">Refresh</string>
    <string name="ab_logout">Log Out</string>

    <string name="likes_header">Likes</string>
    <string name="dislikes_header">Dislikes</string>

</resources>
